[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://scripts/chef.gd" type="Script" id=2]
[ext_resource path="res://scenes/ingredients/tomato.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/tools/spatula.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=10]
radius = 0.3
height = 1.4

[node name="Chef" type="KinematicBody" groups=["chef"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.4, 0 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 10 )

[node name="Gimbal" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )

[node name="Camera" type="Camera" parent="Gimbal"]
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="Gimbal/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1.2 )
collision_mask = 3

[node name="RightHand" type="Spatial" parent="Gimbal/Camera"]
transform = Transform( -3.41471e-08, 0.422619, -0.906307, -1, 7.45058e-09, 2.38419e-07, 5.01466e-08, 0.906308, 0.422618, 0.4, -0.3, -0.2 )

[node name="ItemPos" type="Position3D" parent="Gimbal/Camera/RightHand"]
transform = Transform( 0.224144, -0.969452, 0.099627, 0.930117, 0.182285, -0.318834, 0.290934, 0.16413, 0.942561, -0.00999999, -0.509878, 0.00498295 )

[node name="Tomato" parent="Gimbal/Camera/RightHand/ItemPos" instance=ExtResource( 3 )]
transform = Transform( 1, -7.45058e-08, -7.45058e-09, -7.45058e-08, 1, 0, 1.3411e-07, 1.86265e-09, 1, 0, 0, 0 )
visible = false

[node name="ToolPos" type="Position3D" parent="Gimbal/Camera/RightHand"]

[node name="Spatula" parent="Gimbal/Camera/RightHand/ToolPos" instance=ExtResource( 4 )]
visible = false
